Return to java 8 compatible state
Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>