@@ -4,7 +4,6 @@ package glide.api.models.configuration;
 import glide.api.models.configuration.BaseSubscriptionConfiguration.ChannelMode;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.Getter;
 
 /** Package-private implementation of PubSubState. */
@@ -20,8 +19,11 @@ public final class PubSubStateImpl<T extends ChannelMode> implements PubSubState
     }
 
     private static <T extends ChannelMode> Map<T, Set<String>> deepCopy(Map<T, Set<String>> map) {
-        return map.entrySet().stream()
-                .collect(
-                        Collectors.toUnmodifiableMap(Map.Entry::getKey, entry -> Set.copyOf(entry.getValue())));
+        Map<T, Set<String>> result = new java.util.LinkedHashMap<>();
+        for (Map.Entry<T, Set<String>> entry : map.entrySet()) {
+            Set<String> copiedSet = new java.util.LinkedHashSet<>(entry.getValue());
+            result.put(entry.getKey(), java.util.Collections.unmodifiableSet(copiedSet));
+        }
+        return java.util.Collections.unmodifiableMap(result);
     }
 }
